      Patch from John Lindgren applied upstream. Thanks! (closes: #539454)

  [ Elimar Riesebieter ]
  * Enable AM_MAINTAINER_MODE in a way where it actually has effect.
    Thanks Lionel Elie Mamane. (closes: #505088)
  * libasound2-dev: Don't install unneeded .la files. Bump shlibs to >> 1.0.20.
  * Added README.sources.
  * Updated changelog.ALSA and patches.

 -- Jordi Mallach <jordi@debian.org>  Sun, 06 Sep 2009 19:31:24 +0200

alsa-lib (1.0.20-4) unstable; urgency=low

  [ Elimar Riesebieter ]
  * Conflicts: libc6-i386 (<= 2.9-18) to lib32asound2 and lib32asound2-dev as
    suggested by Aurelien Jarno. (closes: #538835)

  [ Jordi Mallach ]
  * Update Standards-Version to 3.8.3. No changes needed.

 -- Jordi Mallach <jordi@debian.org>  Fri, 28 Aug 2009 11:37:38 +0200

alsa-lib (1.0.20-3) unstable; urgency=low

  [ Jordi Mallach ]
  * Build-Depend on python-dev instead of python2.4-dev, as suggested
    by Steve Langasek (closes: #532044).

  [ Elimar Riesebieter ]
  * Move files in /emul/ia32-linux to /usr/lib32 as suggested by Clint Adams.
  * Pre-Depends: libc6-i386 (>= 2.9-18) (closes: #533005)
  * Bumped Standards-Version to 3.8.2. No changes.

 -- Jordi Mallach <jordi@debian.org>  Wed, 24 Jun 2009 13:40:03 +0200

alsa-lib (1.0.20-2) unstable; urgency=medium

  [ Elimar Riesebieter ]
  * Added -DUSE_VERSIONED_SYMBOLS to CFLAGS. This make sure the symbols
    associated to ALSA_0.9.0rc4 and ALSA_0.9.0rc8 are back in lib32asound2.
    (closes: #529940)
  * Removed duplicated 'Section' fields in debian/control.

 -- Jordi Mallach <jordi@debian.org>  Fri, 29 May 2009 01:56:26 +0200

alsa-lib (1.0.20-1) unstable; urgency=low

  * New upstream release.

  [ Elimar Riesebieter ]
  * Added lib(32|64)asound2-plugins to lib(32|64)asond2 suggestions. Thanks Jan
    Muszynski. (closes: #523420)
  * Added avr32 to Architectures. Thanks Bradley Smith for the hint.
    (closes: #528667)
  * Replaced "dh_clean -k" with "dh_prep"