@@ -124,12 +124,15 @@ ifneq (,$(build_biarch_stamp))
 	  debian/bitmp/usr/lib/libasound.so \
 	  debian/bitmp/usr/lib/libasound.a \
 	    debian/lib$(bi)asound2-dev/$(bilibdir)/
-	sed -e "/^libdir=/s,=.*,='/$(bilibdir)'," \
+	sed -e "/^libdir=/s,=.*,='/$(bilibdir)',;s,^dependency_libs=.*,dependency_libs=''," \
 	  debian/bitmp/usr/lib/libasound.la \
 	    > debian/lib$(bi)asound2-dev/$(bilibdir)/libasound.la
 #	sed -e "/^libdir=.*lib$$/s,=.*,=/$(bilibdir)," \
 #	  debian/bitmp/usr/lib/pkgconfig/alsa.pc \
 #	    > debian/lib$(bi)asound2-dev/$(bilibdir)/pkgconfig/alsa.pc
+else
+	sed -ie "s,^dependency_libs=.*,dependency_libs=''," \
+	  debian/tmp/usr/lib/libasound.la
 endif
 	dh_installdirs -s
 	dh_install -s
@@ -158,9 +161,9 @@ install-indep: build-indep-stamp
 	dh_fixperms -i
 
 binary-arch: build-arch-stamp install-arch
-	dh_makeshlibs -plibasound2  -V'libasound2 (>> 1.0.20)'
+	dh_makeshlibs -plibasound2  -V'libasound2 (>> 1.0.18)'
 ifneq (,$(build_biarch_stamp))
-	dh_makeshlibs -plib$(bi)asound2  -V'lib$(bi)asound2 (>> 1.0.20)'
+	dh_makeshlibs -plib$(bi)asound2  -V'lib$(bi)asound2 (>> 1.0.18)'
 endif
 
 	dh_installdeb -s
